--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Rosa Hernandez | Desarrolladora Java</title>
+  <title>Rosa Hernández | Desarrolladora Java</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 40px;
-      background: #f4f4f4;
+      margin: 80px;
+      background: #F2CEBD;
       color: #333;
     }
     h1 { color: #2c3e50; }
@@ -23,7 +23,8 @@
 
   <section>
     <h1>Hola, soy Rosa Hernández </h1>
-    <p>Desarrolladora Java apasionada por el desarrollo backend y microservicios.</p>
+    <p>Soy Desarrolladora Java, con experiencia en el mundo financiero desde hace 3 años y medio, apasionada por el desarrollo backend y microservicios. 
+      Les presento a continuacíón un poco de mi viaje por el desarrollo de software</p>
   </section>
 
   <section>
@@ -40,7 +41,7 @@
   <section>
     <h2>📂 Proyectos</h2>
     <p>
-      <a href="https://github.com/tuusuario">Ver mis proyectos en GitHub</a>
+      <a href="https://github.com/RosaHernandez7">Ver mis proyectos en GitHub</a>
     </p>
   </section>
 
