--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- HERO -->
   <section class="hero">
     <div class="hero-content">
-      <img src="assets/profile.jpg" alt="Foto de perfil" class="avatar">
+      <img src="assets/profile.webp" alt="Foto de perfil" class="avatar">
 
       <div class="hero-text">
         <h1>Hola, soy Rosa.</h1>
