--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
     <h2>Work Examples</h2>
 
     <div class="projects">
-      <img src="assets/project1.png" alt="Proyecto 1">
-      <img src="assets/project2.png" alt="Proyecto 2">
-      <img src="assets/project3.png" alt="Proyecto 3">
+      <img src="assets/project1.png" alt="Java 8+">
+      <img src="assets/project2.png" alt="Spring Boot">
+      <img src="assets/project3.png" alt="Microservicios">
+      <img src="assets/project3.png" alt="REST APIs">
+      <img src="assets/project3.png" alt="Git / GitHub">
     </div>
 
-    <button class="btn-outline">View all projects</button>
+   <a href="https://github.com/RosaHernandez7" class="btn-outline" target="_blank"> View all projects </a>
+
   </section>
 
   <script src="js/main.js"></script>
